# volleyball-launcher

./: .gitignore  CMakeLists.txt  Makefile  README.md  c_bridge  c_bridge.c  fsm_test  motor_control  motor_control.c  motor_control.h  todo.txt
UI/DimeTime/: Advanced.qml  CMakeLists.txt  Config.qml  ConfigOld.qml  Main.qml  Set.qml  Welcome.qml  main.cpp
UI/DimeTime/app/src/: arc_calc.c  operation.c  set.c
UI/DimeTime/app/src/include/: operation.h
UI/DimeTime/app/wrappers/: calibration_wrapper.cpp  operation_wrapper.cpp  set_wrapper.cpp
UI/DimeTime/app/wrappers/include/: calibration_wrapper.h  operation_wrapper.h  set_wrapper.h
UI/DimeTime/hal/src/: bts7960.c  pwm.c
app/: CMakeLists.txt
app/functiontests/: bts7960_test_main.c  fsm_test.c  mcp4725_test_main.c  mpu6050_test_main.c  system_integration_test_main.c  tb6600_test_main.c
app/src/: advanced.c  arc_calc.c  calibration.c  fsm.c  fsm_main.c  main.c  motor_test_main.c  operation.c  set.c  set_old.c  tb6600_test_main.c
app/src/include/: advanced.h  arc_calc.h  calibration.h  fsm.h  operation.h  set.h  set_old.h
app/tests/: bts7960_test.c
app/wrappers/: calibration_wrapper.cpp  operation_wrapper.cpp  set_wrapper.cpp
hal/: CMakeLists.txt
hal/include/: mpu6050.h  tachometer.h  tb6600.h
hal/include/hal/: bts7960.h  mcp4725.h  pwm.h  stepper.h  tb6600.h
hal/src/: bts7960.c  mcp4725.c  mpu6050.c  pwm.c  stepper.c  tachometer.c  tb6600.c
mediapipe_files/: BUILD  auto_exposure.py  camera_test.cpp  hand_recognition.cpp  hand_recognition.h  hand_tracking_custom.pbtxt  m2demo.cpp
server/: binding.gyp  fake_gesture_udp  fake_gesture_udp.c  motor_addon.cc  package-lock.json  package.json  server.js
server/lib/: gesture_server.js  launcher_control.js
server/public/: index.html  old-index.html  old-old-index.html  styles.css
server/public/javascripts/: gesture_ui.js  machine_control.js  page_control.js
server/public/stylesheets/: style.css
tests/: bts7960_test.c
tests/include/: bts_7960_test.h
